--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "decimal.js": "^10.6.0",
+    "fs": "^0.0.1-security",
     "prompt-sync": "^4.2.0",
     "sharp": "^0.34.5",
     "synchronized-promise": "^0.3.1"
